Responsive and Final Tuch

--- a/src/components/GridsSidebarCntlr/GridsSidebarCntlr.css
+++ b/src/components/GridsSidebarCntlr/GridsSidebarCntlr.css
@@ -25,3 +25,88 @@ br {
 p {
     font-weight: 600;
 }
+
+@media screen and (max-width: 1200px) {
+    .grids-cntlr {
+        padding-right: 20px;
+        grid-template-columns: repeat(2, 320px);
+        justify-content: left;
+        gap: 15px;
+        width: 70%;
+    }
+
+    .sidebar-cntlr {
+        width: 30%;
+    }
+
+    .cntlr {
+        padding-left: 20px;
+    }
+
+    .n-title {
+        font-size: 20px;
+    }
+}
+
+
+@media screen and (max-width: 1024px) {
+    .grids-cntlr {
+        grid-template-columns: repeat(2, 320px);
+
+    }
+
+}
+
+@media screen and (max-width: 992px) {
+    .grids-cntlr {
+        grid-template-columns: repeat(1, 320px);
+
+    }
+
+    .sidebar-cntlr {
+        width: 40%;
+    }
+
+    br {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .persentage {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .grids-sidebar-cntlr {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sidebar-cntlr {
+        position: static;
+        width: 100%;
+        max-width: 500px;
+        margin: auto;
+    }
+
+    .grids-cntlr {
+        order: 2;
+        margin-top: 20px;
+        padding: 0;
+    }
+
+    .title-cntlr-desk {
+        display: none;
+    }
+
+    .cntlr {
+        padding-right: 20px;
+        padding-top: 50px;
+    }
+
+    .grids-cntlr {
+        justify-content: center;
+    }
+}
